[package]
name = "shuttlings-cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
actix-ws = "0.3.0"
anyhow = "1.0.93"
base64 = "0.22.1"
chrono = "0.4.38"
fancy-regex = "0.14.0"
git2 = "0.19.0"
hex = "0.4.3"
html-escape = "0.2.13"
image = "0.25.5"
lazy_static = "1.5.0"
ordered-float = { version = "4.5.0", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.2"
tar = "0.4.43"
tempfile = "3.14.0"
tokio = "1.41.1"
tracing = "0.1.41"
ulid = { version = "1.1.3", features = ["uuid", "serde"] }
unic-emoji-char = "0.9.0"
uuid = "1.11.0"
walkdir = "2.5.0"
